fix overflow issue

--- a/_sass/theme/_base.scss
+++ b/_sass/theme/_base.scss
@@ -4,6 +4,7 @@ html {
   //font-family: 'Epilogue', sans-serif;
   font-family: 'Open Sans', sans-serif;
   scroll-behavior: smooth;
+  overflow-x: hidden;
 }
 
 body {
